URI::Escape::uri_escape_utf8 do.  Patch by Denis Shaposhnikov.

- On startup Mason creates a file named ".__obj_create_marker" in the
object directory.  Under mod_perl, Mason was not chmod'ing the file
when Apache was started as root. This led to permission errors in
environments where the Interp is created anew every request.  Task id
#593.


1.3101  August 23, 2005

[ BUG FIXES ]

- One last fix for CGIHandler.  If you provided your own out_method it
was ignoring it and using its own.  Reported by David Glasser.


1.31  August 20, 2005

[ BUG FIXES ]

- Fix several regressions in the CGIHandler and FakeApache modules.
Some changes from the stable branch were never merged into the trunk
before 1.30.  Reported by Jesse Vincent.  Task id #589.

- Under Apache2, if an ApacheHandler object was created during server
startup and the associated Interp object created any files or
directories, Mason would crash when attempting to chown those
files/dirs to the uid/gid that Apache will use after forking.  Task
#586.

- The compiler was adding an extra block around a component's
body, which meant that variables declared in the body (in perl lines
or blocks) were not seen in the cleanup section.  Task id #587.

- The compiler was also adding "no warnings 'uninitialized'" in this
block, which could hide various errors.

- Hopefully fix $VERSION in ApacheHandler so PAUSE will not be
confused and think we have regressed.

- Turned off some prompts during the module's installation.  These
were intended to help new users configure Apache to run Mason
components, but they're probably a bit confusing.  Will return in a
future release as a separate script that can be run from the command
line.


1.30  August 11, 2005

[ INCOMPATIBLE CHANGES ]

- ** Under mod_perl2, MasonArgsMethod will default to "CGI", since
libapreq2 is still in development.  If you have successfully installed
libapreq2, just set MasonArgsMethod to "mod_perl" to use it.

[ ENHANCEMENTS ]
